fix header nav alignemnt for larger screens

--- a/app/styles/elements/_header-navbar-menu.scss
+++ b/app/styles/elements/_header-navbar-menu.scss
@@ -3,16 +3,22 @@
 ul.header-navbar-menu {
   list-style-type: none;
   @include inline-block(top);
-  //padding:11px 11px 9px 75px;
   padding:11px 11px 9px 45px;
   margin:0;
   white-space: nowrap;
   font-size:18px;
 
+  @media (min-width:$screen-s-min) {
+    float:left;
+    margin-left:0;
+    padding-left:75px;
+  }
+
+
   li {
     display: inline;
     margin: 0px 40px 0px 0px;
-    font-size: 14px; /* This hack removes excess height */
+    font-size: 14px; //this hack removes excess height
 
     a {
       color: $grey-light-4;
@@ -60,7 +66,7 @@ ul.header-navbar-menu {
       span{
         vertical-align: middle;
         height: 24px;
-        font-size: 16px; /* This hack removes excess height */
+        font-size: 16px; //this hack removes excess height
         &:last-child {
           font-size: 12px;
           font-weight:bold;
@@ -72,10 +78,5 @@ ul.header-navbar-menu {
         }
       }
     }
-  }
-
-  @media (min-width:$screen-s-min) {
-    float:left;
-    margin-left:0;
   }
 }
